--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -27,6 +27,7 @@
     "from sklearn import datasets\n",
     "from sklearn import svm\n",
     "import seaborn as sns\n",
+    "import \n",
     "\n",
     "import statsmodels.api as sm\n",
     "sns.set()\n",
@@ -63,6 +64,17 @@
    "outputs": [],
    "source": [
     "data = charles.Data_prep_replication(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data.loc[:, data.columns != '']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y1, random_state=0, test_size=0.4)\n",
+    "print(X_train.shape, X_test.shape)"
    ]
   },
   {
