--- a/src/exploration.ipynb
+++ b/src/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"../Data/result_full_factorial_pgm.csv\""
+    "import run_reproduction"
    ]
   },
   {
@@ -62,7 +62,275 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = charles.Data_prep_replication(file)"
+    "file = \"../Data/result_full_factorial_pgm.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = run_reproduction.Data_prep_replication(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = run_reproduction.weights_obtain(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = run_reproduction.regression_results(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Median of the Massdistribution in kDa</th>\n",
+       "      <th>Sigma parameter of the Massdistribution</th>\n",
+       "      <th>Volume fraction</th>\n",
+       "      <th>Rate constant</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">beta</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">alpha E</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">alpha ES</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">alpha P</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">alpha S</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Estimate</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>0.975</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Estimate</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>...</th>\n",
+       "      <th>0.975</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Estimate</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>0.975</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Estimate</th>\n",
+       "      <th>0.025</th>\n",
+       "      <th>0.975</th>\n",
+       "      <th>p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>k1_bwd</td>\n",
+       "      <td>-0.014756</td>\n",
+       "      <td>-0.014822</td>\n",
+       "      <td>-0.014691</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000190</td>\n",
+       "      <td>-0.000317</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000109</td>\n",
+       "      <td>7.713487e-01</td>\n",
+       "      <td>-0.002936</td>\n",
+       "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-0.002936</td>\n",
+       "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>k1_fwd</td>\n",
+       "      <td>0.073132</td>\n",
+       "      <td>0.070293</td>\n",
+       "      <td>0.075971</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.010658</td>\n",
+       "      <td>0.003545</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.011204</td>\n",
+       "      <td>8.019231e-02</td>\n",
+       "      <td>0.000256</td>\n",
+       "      <td>-0.001460</td>\n",
+       "      <td>0.001971</td>\n",
+       "      <td>7.701728e-01</td>\n",
+       "      <td>0.004736</td>\n",
+       "      <td>0.002871</td>\n",
+       "      <td>0.006600</td>\n",
+       "      <td>6.552938e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>k2_bwd</td>\n",
+       "      <td>0.068795</td>\n",
+       "      <td>0.065675</td>\n",
+       "      <td>0.071915</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000481</td>\n",
+       "      <td>-0.005600</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.006852</td>\n",
+       "      <td>7.308795e-01</td>\n",
+       "      <td>0.006592</td>\n",
+       "      <td>0.004601</td>\n",
+       "      <td>0.008584</td>\n",
+       "      <td>9.199772e-11</td>\n",
+       "      <td>-0.000230</td>\n",
+       "      <td>-0.002004</td>\n",
+       "      <td>0.001545</td>\n",
+       "      <td>7.996240e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>k2_fwd</td>\n",
+       "      <td>-0.014756</td>\n",
+       "      <td>-0.014821</td>\n",
+       "      <td>-0.014690</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000190</td>\n",
+       "      <td>-0.000317</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000108</td>\n",
+       "      <td>7.688221e-01</td>\n",
+       "      <td>-0.002936</td>\n",
+       "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-0.002936</td>\n",
+       "      <td>-0.002976</td>\n",
+       "      <td>-0.002896</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31.9</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>k1_bwd</td>\n",
+       "      <td>-0.117351</td>\n",
+       "      <td>-0.117510</td>\n",
+       "      <td>-0.117192</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001708</td>\n",
+       "      <td>0.001396</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.003771</td>\n",
+       "      <td>5.107549e-100</td>\n",
+       "      <td>-0.003575</td>\n",
+       "      <td>-0.003673</td>\n",
+       "      <td>-0.003478</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-0.003564</td>\n",
+       "      <td>-0.003661</td>\n",
+       "      <td>-0.003468</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Median of the Massdistribution in kDa  \\\n",
+       "                                          \n",
+       "0                                  31.9   \n",
+       "1                                  31.9   \n",
+       "2                                  31.9   \n",
+       "3                                  31.9   \n",
+       "4                                  31.9   \n",
+       "\n",
+       "  Sigma parameter of the Massdistribution Volume fraction Rate constant  \\\n",
+       "                                                                          \n",
+       "0                                   0.825             0.0        k1_bwd   \n",
+       "1                                   0.825             0.0        k1_fwd   \n",
+       "2                                   0.825             0.0        k2_bwd   \n",
+       "3                                   0.825             0.0        k2_fwd   \n",
+       "4                                   0.825             0.1        k1_bwd   \n",
+       "\n",
+       "       beta                               alpha E                ...       \\\n",
+       "   Estimate     0.025     0.975 p-value  Estimate     0.025      ...        \n",
+       "0 -0.014756 -0.014822 -0.014691     0.0 -0.000190 -0.000317      ...        \n",
+       "1  0.073132  0.070293  0.075971     0.0  0.010658  0.003545      ...        \n",
+       "2  0.068795  0.065675  0.071915     0.0  0.000481 -0.005600      ...        \n",
+       "3 -0.014756 -0.014821 -0.014690     0.0 -0.000190 -0.000317      ...        \n",
+       "4 -0.117351 -0.117510 -0.117192     0.0  0.001708  0.001396      ...        \n",
+       "\n",
+       "   alpha ES                  alpha P                                    \\\n",
+       "      0.975        p-value  Estimate     0.025     0.975       p-value   \n",
+       "0  0.000109   7.713487e-01 -0.002936 -0.002976 -0.002896  0.000000e+00   \n",
+       "1  0.011204   8.019231e-02  0.000256 -0.001460  0.001971  7.701728e-01   \n",
+       "2  0.006852   7.308795e-01  0.006592  0.004601  0.008584  9.199772e-11   \n",
+       "3  0.000108   7.688221e-01 -0.002936 -0.002976 -0.002896  0.000000e+00   \n",
+       "4  0.003771  5.107549e-100 -0.003575 -0.003673 -0.003478  0.000000e+00   \n",
+       "\n",
+       "    alpha S                                    \n",
+       "   Estimate     0.025     0.975       p-value  \n",
+       "0 -0.002936 -0.002976 -0.002896  0.000000e+00  \n",
+       "1  0.004736  0.002871  0.006600  6.552938e-07  \n",
+       "2 -0.000230 -0.002004  0.001545  7.996240e-01  \n",
+       "3 -0.002936 -0.002976 -0.002896  0.000000e+00  \n",
+       "4 -0.003564 -0.003661 -0.003468  0.000000e+00  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.head()"
    ]
   },
   {
