--- a/src/Marie_test.ipynb
+++ b/src/Marie_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,11 @@
     "import os\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, explained_variance_score\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn import datasets\n",
     "from sklearn import svm\n",
     "import seaborn as sns\n",
@@ -29,9 +32,9 @@
     "import statsmodels.api as sm\n",
     "sns.set()\n",
     "\n",
-    "\n",
-    "import charles\n",
+    "import reproduction\n",
     "import marie\n",
+    "from general_code import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = charles.Data_prep_replication(FILE)"
+    "data = reproduction.Data_prep_replication(FILE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +191,7 @@
        "4   -0.816897  0.587787 -1.609438  0.000000  1.098612  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,39 +601,114 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(151956, 45)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define X and y of the regression problem\n",
+    "y1, y2, y3, y4 = data['log_k1_bwd'], data['log_k1_fwd'], data['log_k2_bwd'], data['log_k2_fwd']\n",
+    "\n",
+    "X = data.drop(columns=['log_k1_bwd', 'log_k1_fwd', 'log_k2_bwd','log_k2_fwd'])\n",
+    "\n",
+    "# transform into categorical values\n",
+    "X = cast_categories(X, 'sigma_mass', 'sigma_mass')\n",
+    "\n",
+    "poly = PolynomialFeatures(2, interaction_only=False)\n",
+    "X = poly.fit_transform(X.values)\n",
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(91173, 45) (60783, 45)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y1, random_state=0, test_size=0.4)\n",
+    "print(X_train.shape, X_test.shape)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# scale the data TODO "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MLPRegressor(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(30,), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=200, momentum=0.9,\n",
+       "       nesterovs_momentum=True, power_t=0.5, random_state=0, shuffle=True,\n",
+       "       solver='adam', tol=0.0001, validation_fraction=0.1, verbose=False,\n",
+       "       warm_start=False)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NN_regressor = MLPRegressor(hidden_layer_sizes=(30, ), activation='relu', solver='adam', alpha=0.0001,random_state=0)\n",
+    "NN_regressor.fit(X_train, y_train)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE on train :  0.04974775786415148 \n",
+      " MSE on test :  0.049599121045877506\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_tr = NN_regressor.predict(X_train)\n",
+    "y_pred_te = NN_regressor.predict(X_test)\n",
+    "\n",
+    "print('MSE on train : ', mean_squared_error(y_train, y_pred_tr), '\\n',\n",
+    "     'MSE on test : ', mean_squared_error(y_test, y_pred_te))"
+   ]
   },
   {
    "cell_type": "code",
