--- a/src/William_Notebook.ipynb
+++ b/src/William_Notebook.ipynb
@@ -312,7 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "X = regressions.polynomial_data(X, 1, categories=True)"
+    "X = regressions.polynomial_data(X, 2, categories=True)"
    ]
   },
   {
@@ -349,6 +349,21 @@
        "      <th>3</th>\n",
        "      <th>4</th>\n",
        "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>31</th>\n",
+       "      <th>32</th>\n",
+       "      <th>33</th>\n",
+       "      <th>34</th>\n",
+       "      <th>35</th>\n",
+       "      <th>36</th>\n",
+       "      <th>37</th>\n",
+       "      <th>38</th>\n",
+       "      <th>39</th>\n",
+       "      <th>40</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -360,6 +375,21 @@
        "      <td>-9.230543</td>\n",
        "      <td>-9.923690</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>95.296410</td>\n",
+       "      <td>116.745689</td>\n",
+       "      <td>-118.120055</td>\n",
+       "      <td>90.108451</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-9.923690</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -369,6 +399,21 @@
        "      <td>-8.825078</td>\n",
        "      <td>-8.314252</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>143.022765</td>\n",
+       "      <td>116.745689</td>\n",
+       "      <td>-144.706472</td>\n",
+       "      <td>105.540983</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8.314252</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -378,6 +423,21 @@
        "      <td>-11.022305</td>\n",
        "      <td>-10.616837</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>117.952638</td>\n",
+       "      <td>108.750475</td>\n",
+       "      <td>-346.453149</td>\n",
+       "      <td>119.708844</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-10.8606</td>\n",
+       "      <td>-10.013302</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>-11.022305</td>\n",
+       "      <td>-10.616837</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -387,6 +447,21 @@
        "      <td>-8.537396</td>\n",
        "      <td>-11.309985</td>\n",
        "      <td>0.4</td>\n",
+       "      <td>126.924229</td>\n",
+       "      <td>111.306146</td>\n",
+       "      <td>-136.319391</td>\n",
+       "      <td>96.182860</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-11.309985</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -396,18 +471,50 @@
        "      <td>-9.923690</td>\n",
        "      <td>-8.825078</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>143.022765</td>\n",
+       "      <td>116.745689</td>\n",
+       "      <td>-144.706472</td>\n",
+       "      <td>118.679521</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-8.825078</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>-0.0000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0          1     2          3          4    5\n",
-       "0  -9.761988 -11.959213  12.1  -9.230543  -9.923690  0.2\n",
-       "1 -11.959213  -9.761988  12.1  -8.825078  -8.314252  0.2\n",
-       "2 -10.860600 -10.013302  31.9 -11.022305 -10.616837  0.2\n",
-       "3 -11.266065  -9.879771  12.1  -8.537396 -11.309985  0.4\n",
-       "4 -11.959213  -9.761988  12.1  -9.923690  -8.825078  0.2"
+       "          0          1     2          3          4    5           6   \\\n",
+       "0  -9.761988 -11.959213  12.1  -9.230543  -9.923690  0.2   95.296410   \n",
+       "1 -11.959213  -9.761988  12.1  -8.825078  -8.314252  0.2  143.022765   \n",
+       "2 -10.860600 -10.013302  31.9 -11.022305 -10.616837  0.2  117.952638   \n",
+       "3 -11.266065  -9.879771  12.1  -8.537396 -11.309985  0.4  126.924229   \n",
+       "4 -11.959213  -9.761988  12.1  -9.923690  -8.825078  0.2  143.022765   \n",
+       "\n",
+       "           7           8           9  ...          31   32       33  \\\n",
+       "0  116.745689 -118.120055   90.108451 ...   -9.923690  0.2  -0.0000   \n",
+       "1  116.745689 -144.706472  105.540983 ...   -8.314252  0.2  -0.0000   \n",
+       "2  108.750475 -346.453149  119.708844 ...   -0.000000  0.0 -10.8606   \n",
+       "3  111.306146 -136.319391   96.182860 ...  -11.309985  0.4  -0.0000   \n",
+       "4  116.745689 -144.706472  118.679521 ...   -8.825078  0.2  -0.0000   \n",
+       "\n",
+       "          34    35         36         37   38   39   40  \n",
+       "0  -0.000000   0.0  -0.000000  -0.000000  0.0  1.0  0.0  \n",
+       "1  -0.000000   0.0  -0.000000  -0.000000  0.0  1.0  0.0  \n",
+       "2 -10.013302  31.9 -11.022305 -10.616837  0.2  0.0  1.0  \n",
+       "3  -0.000000   0.0  -0.000000  -0.000000  0.0  1.0  0.0  \n",
+       "4  -0.000000   0.0  -0.000000  -0.000000  0.0  1.0  0.0  \n",
+       "\n",
+       "[5 rows x 41 columns]"
       ]
      },
      "execution_count": 5,
@@ -429,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -443,7 +550,8 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split_realiz(X, Y, test_size=0.4)\n",
+    "X_train, X_test, y_train, y_test = regressions.train_test_split(X, y1,\n",
+    "                                                                       test_size=0.4, random_state = 33)\n",
     "print(X_train.shape, X_test.shape)"
    ]
   },
@@ -456,20 +564,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R^2 score :  0.9772271563630285 \n",
-      " Test R^2 score :  0.9772781415924489\n"
+      "Train R^2 score :  0.9881236491100363 \n",
+      " Test R^2 score :  0.9880772240177137\n"
      ]
     }
    ],
    "source": [
-    "ridge_reg = RidgeCV(alphas=np.logspace(-5,5,40), fit_intercept=False).fit(X_train, y_train)\n",
+    "ridge_reg = RidgeCV(alphas=np.logspace(-5,5,40), cv=None, fit_intercept=False).fit(X_train, y_train)\n",
     "\n",
     "print('Train R^2 score : ', ridge_reg.score(X_train, y_train), '\\n',\n",
     "     'Test R^2 score : ', ridge_reg.score(X_test, y_test))"
@@ -477,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -486,8 +594,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on train :  0.01996362339452579 \n",
-      " MSE on test :  0.019946237140155434\n"
+      "MSE on train :  0.01323977177944051 \n",
+      " MSE on test :  0.013262313845630634\n"
      ]
     }
    ],
@@ -501,32 +609,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha :  0.003665241237079626 \n",
-      " Coeff :  [ 1.40099101e-02 -7.03980994e-02 -3.92428024e-02  5.02744229e-02\n",
-      " -4.51612149e-02 -4.91458286e-02 -1.44835325e+00  1.31997844e-02\n",
-      "  8.10125627e-04  8.17234446e-04 -1.41009590e-02 -1.01627469e-04\n",
-      "  1.83142034e-04 -1.88953448e-04 -3.11658506e-03 -3.51916379e-02\n",
-      " -3.52064617e-02  3.02798060e-03 -1.45337722e-04  4.10709773e-04\n",
-      " -4.27640060e-04  6.83188972e-03 -2.11970139e-02 -1.80457878e-02\n",
-      " -1.60080405e-03  4.07090122e-05 -2.27312648e-05  1.11969489e-01\n",
-      "  2.44314134e-02  2.58430079e-02 -3.49407711e-03 -1.82472524e-04\n",
-      " -1.87094169e-02 -2.26375752e-02 -2.25236390e-02 -3.27078944e-03\n",
-      " -1.64966589e-02 -2.59135698e-02 -2.32322581e-02 -1.23393055e+01\n",
-      " -1.11338067e+00 -3.34972584e-01  1.31997844e-02  0.00000000e+00\n",
-      "  8.10125606e-04]\n"
+      "alpha :  0.002030917620904735\n"
      ]
     }
    ],
    "source": [
-    "print('alpha : ', ridge_reg.alpha_,'\\n',\n",
-    "     'Coeff : ', ridge_reg.coef_)"
+    "print('alpha : ', ridge_reg.alpha_)"
    ]
   },
   {
@@ -2976,6 +3071,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    results = pd.DataFrame({'R^2 train score': 4*[0],\n",
+    "                            'R^2 test score': 4*[0],\n",
+    "                            'MSE train score': 4*[0],\n",
+    "                            'MSE test score': 4*[0]}, index = ['k1_bwd_effective','k1_fwd_effective','k2_bwd_effective','k2_fwd_effective'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R^2 train score</th>\n",
+       "      <th>R^2 test score</th>\n",
+       "      <th>MSE train score</th>\n",
+       "      <th>MSE test score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>k1_bwd_effective</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k1_fwd_effective</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k2_bwd_effective</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>k2_fwd_effective</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  R^2 train score  R^2 test score  MSE train score  \\\n",
+       "k1_bwd_effective                0               0                0   \n",
+       "k1_fwd_effective                0               0                0   \n",
+       "k2_bwd_effective                0               0                0   \n",
+       "k2_fwd_effective                0               0                0   \n",
+       "\n",
+       "                  MSE test score  \n",
+       "k1_bwd_effective               0  \n",
+       "k1_fwd_effective               0  \n",
+       "k2_bwd_effective               0  \n",
+       "k2_fwd_effective               0  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2998,7 +3195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
