--- a/src/William_Notebook.ipynb
+++ b/src/William_Notebook.ipynb
@@ -158,7 +158,7 @@
    ],
    "source": [
     "#Read using function\n",
-    "y1, y2, y3, y4, X, realization = regressions.data_initialization(realiz=True)\n",
+    "y1, y2, y3, y4, X, realization = treatment.data_initialization(realiz=True)\n",
     "X.head()"
    ]
   },
@@ -306,18 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "X = regressions.polynomial_data(X, 2, categories=True)"
+    "X = treatment.polynomial_data(X, 2, categories=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -517,7 +517,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -550,7 +550,7 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = regressions.train_test_split(X, y1,\n",
+    "X_train, X_test, y_train, y_test = treatment.train_test_split(X, y1,\n",
     "                                                                       test_size=0.4, random_state = 33)\n",
     "print(X_train.shape, X_test.shape)"
    ]
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -997,12 +997,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models import easyXGB"
+    "from regressions import easyXGB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1015,15 +1015,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE on train :  0.00017711893452052204 \n",
-      " MSE on test :  0.00018433214000005704\n"
+     "ename": "AttributeError",
+     "evalue": "'easyXGB' object has no attribute 'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-8971baccf0b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my1_pred_tr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0measyXGBReg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0my1_pred_te\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0measyXGBReg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m print('MSE on train : ', mean_squared_error(y1_train, y1_pred_tr), '\\n',\n\u001b[1;32m      5\u001b[0m      'MSE on test : ', mean_squared_error(y1_test, y1_pred_te))\n",
+      "\u001b[0;32m~/Desktop/EPFL/projects/ML_CS433_project2/src/regressions.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X_test)\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0mdtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'easyXGB' object has no attribute 'model'"
      ]
     }
    ],
@@ -1074,14 +1078,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "easyXGBReg = easyXGB(load=5)\n",
-    "easyXGBReg.set_params(tree_method = 'gpu_hist')\n",
+    "easyXGBReg.set_params(tree_method = 'auto')\n",
     "# easyXGBReg.fit(X_train, y1_train)"
    ]
   },
@@ -1117,7 +1121,7 @@
     }
    ],
    "source": [
-    "X_train, X_test, y1_train, y1_test = train_test_split(X, y1, test_size=0.4)\n",
+    "X_train, X_test, y1_train, y1_test = train_test_split(X, y1, test_size=0.4, random_state = 33)\n",
     "print(X_train.shape, X_test.shape)\n",
     "y1_train, y1_test = y1_train.values, y1_test.values"
    ]
@@ -2085,10 +2089,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "easyXGBReg.fit(X_train, y1_train,  **method[1])"
@@ -2096,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -2105,8 +2107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE on train :  0.00016928357988114882 \n",
-      " MSE on test :  0.00018327155365398135\n"
+      "MSE on train :  0.00017437435376829315 \n",
+      " MSE on test :  0.00018024034688159793\n"
      ]
     }
    ],
