Run notebook updated

--- a/src/Run.ipynb
+++ b/src/Run.ipynb
@@ -4,19 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Attention!\n",
+    "The results presented in our report have been obtained with the following system specifications:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Python version\n",
+    "    3.6.5 |Anaconda, Inc.| (default, Apr 29 2018, 16:14:56) \n",
+    "    [GCC 7.2.0]\n",
+    "    Version info.\n",
+    "    sys.version_info(major=3, minor=6, micro=5, releaselevel='final', serial=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Necessary modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "code needed for the reproduction of the results stated in \"Crowded enzyme kinetics using simulation and machine learning\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
     "import regressions  \n",
@@ -364,8 +390,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following model fits the degree-2-polynomial design"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -389,67 +422,67 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MSE test score</th>\n",
-       "      <th>MSE train score</th>\n",
-       "      <th>R^2 test score</th>\n",
        "      <th>R^2 train score</th>\n",
+       "      <th>R^2 test score</th>\n",
+       "      <th>MSE train score</th>\n",
+       "      <th>MSE test score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>k1_bwd_effective</th>\n",
-       "      <td>0.875062</td>\n",
-       "      <td>0.874470</td>\n",
-       "      <td>0.139296</td>\n",
-       "      <td>0.139610</td>\n",
+       "      <td>0.988743</td>\n",
+       "      <td>0.988731</td>\n",
+       "      <td>0.012551</td>\n",
+       "      <td>0.012533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k1_fwd_effective</th>\n",
-       "      <td>-7.343212</td>\n",
-       "      <td>-7.378420</td>\n",
-       "      <td>1.387571</td>\n",
-       "      <td>1.396313</td>\n",
+       "      <td>0.869150</td>\n",
+       "      <td>0.867772</td>\n",
+       "      <td>0.021762</td>\n",
+       "      <td>0.022036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k2_bwd_effective</th>\n",
-       "      <td>-7.248145</td>\n",
-       "      <td>-7.260605</td>\n",
-       "      <td>1.374794</td>\n",
-       "      <td>1.384820</td>\n",
+       "      <td>0.882551</td>\n",
+       "      <td>0.881837</td>\n",
+       "      <td>0.019576</td>\n",
+       "      <td>0.019809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>k2_fwd_effective</th>\n",
-       "      <td>0.701663</td>\n",
-       "      <td>0.699823</td>\n",
-       "      <td>0.332622</td>\n",
-       "      <td>0.333842</td>\n",
+       "      <td>0.987505</td>\n",
+       "      <td>0.987513</td>\n",
+       "      <td>0.013931</td>\n",
+       "      <td>0.013887</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  MSE test score  MSE train score  R^2 test score  \\\n",
-       "k1_bwd_effective        0.875062         0.874470        0.139296   \n",
-       "k1_fwd_effective       -7.343212        -7.378420        1.387571   \n",
-       "k2_bwd_effective       -7.248145        -7.260605        1.374794   \n",
-       "k2_fwd_effective        0.701663         0.699823        0.332622   \n",
+       "                  R^2 train score  R^2 test score  MSE train score  \\\n",
+       "k1_bwd_effective         0.988743        0.988731         0.012551   \n",
+       "k1_fwd_effective         0.869150        0.867772         0.021762   \n",
+       "k2_bwd_effective         0.882551        0.881837         0.019576   \n",
+       "k2_fwd_effective         0.987505        0.987513         0.013931   \n",
        "\n",
-       "                  R^2 train score  \n",
-       "k1_bwd_effective         0.139610  \n",
-       "k1_fwd_effective         1.396313  \n",
-       "k2_bwd_effective         1.384820  \n",
-       "k2_fwd_effective         0.333842  "
+       "                  MSE test score  \n",
+       "k1_bwd_effective        0.012533  \n",
+       "k1_fwd_effective        0.022036  \n",
+       "k2_bwd_effective        0.019809  \n",
+       "k2_fwd_effective        0.013887  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ridgeReg = regressions.reproduction_ridge()\n",
-    "ridgeReg.scores"
+    "ridgeRegPoly2 = regressions.reproduction_ridge()\n",
+    "ridgeRegPoly2.scores"
    ]
   },
   {
@@ -542,8 +575,8 @@
     }
    ],
    "source": [
-    "ridgeReg2 = regressions.reproduction_ridge(interaction_only= True)\n",
-    "ridgeReg2.scores"
+    "ridgeRegInteractions = regressions.reproduction_ridge(interaction_only= True)\n",
+    "ridgeRegInteractions.scores"
    ]
   },
   {
@@ -555,13 +588,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following model corresponds to SVR on basic design"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#svrReg = regressions.reproduction_svr()\n",
-    "#svrReg.scores"
+    "svrRegSimple = regressions.reproduction_svr(interactions=False)\n",
+    "svrRegSimple.scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following model is the SVR fitted on the interaction (2 by 2 feature products) design"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svrRegInteractions = regressions.reproduction_svr()\n",
+    "svrRegInteractions.scores"
    ]
   },
   {
@@ -572,147 +629,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 48 extra nodes, 0 pruned nodes, max_depth=6\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 92 extra nodes, 0 pruned nodes, max_depth=7\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 136 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 180 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 272 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 340 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 290 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 316 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 366 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 320 extra nodes, 0 pruned nodes, max_depth=9\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 0 pruned nodes, max_depth=3\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 24 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 28 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 8 extra nodes, 0 pruned nodes, max_depth=3\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 16 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 14 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 20 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 22 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 26 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 30 extra nodes, 0 pruned nodes, max_depth=4\n",
-      "[14:31:04] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 70 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 86 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 124 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 184 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 224 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 292 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 360 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 316 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 330 extra nodes, 0 pruned nodes, max_depth=10\n",
-      "[14:31:05] /workspace/src/tree/updater_prune.cc:74: tree pruning end, 1 roots, 306 extra nodes, 0 pruned nodes, max_depth=10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSE test score</th>\n",
-       "      <th>MSE train score</th>\n",
-       "      <th>R^2 test score</th>\n",
-       "      <th>R^2 train score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>k1_bwd_effective</th>\n",
-       "      <td>0.999844</td>\n",
-       "      <td>0.999838</td>\n",
-       "      <td>0.000174</td>\n",
-       "      <td>0.000180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>k1_fwd_effective</th>\n",
-       "      <td>0.918964</td>\n",
-       "      <td>0.916180</td>\n",
-       "      <td>0.013478</td>\n",
-       "      <td>0.013971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>k2_bwd_effective</th>\n",
-       "      <td>0.920206</td>\n",
-       "      <td>0.918504</td>\n",
-       "      <td>0.013307</td>\n",
-       "      <td>0.013651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>k2_fwd_effective</th>\n",
-       "      <td>0.999844</td>\n",
-       "      <td>0.999839</td>\n",
-       "      <td>0.000174</td>\n",
-       "      <td>0.000180</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  MSE test score  MSE train score  R^2 test score  \\\n",
-       "k1_bwd_effective        0.999844         0.999838        0.000174   \n",
-       "k1_fwd_effective        0.918964         0.916180        0.013478   \n",
-       "k2_bwd_effective        0.920206         0.918504        0.013307   \n",
-       "k2_fwd_effective        0.999844         0.999839        0.000174   \n",
-       "\n",
-       "                  R^2 train score  \n",
-       "k1_bwd_effective         0.000180  \n",
-       "k1_fwd_effective         0.013971  \n",
-       "k2_bwd_effective         0.013651  \n",
-       "k2_fwd_effective         0.000180  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xgboostReg = regressions.reproduction_XGBoost()\n",
-    "xgboostReg.scores"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "This is our best model, fitted on the reduced design (as explained in report)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgboostReg = regressions.reproduction_XGBoost()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgboostReg.scores "
    ]
   }
  ],
@@ -732,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
